# desk-buddy

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  使用说明书.md
.github/workflows/: build-desktop.yml  build-installers.yml
docs/images/: README.md
public/mmd-motions/: doze.vmd
src/: MmdPet.tsx  PetWindow.tsx  SettingsWindow.tsx  config.ts  imageCutout.ts  main.tsx  styles.css  tauriRuntime.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
